Solve6/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
  labels:
    app: wep-app
  namespace: netology
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
          - containerPort: 80
        volumeMounts:
          - name: nginx-config  
            mountPath: /usr/share/nginx/html
      #- name: multitool
       # image: wbitt/network-multitool
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-config
