Solve6/pod-tst-role.yml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: nginx
  name: nginx
  namespace: default
spec:
    containers:
    - name: nginx
      image: nginx:latest
      ports:
        - containerPort: 80
