Solve6/service.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-frontend
  namespace: netology  
spec:
  ports:
    - name: web-frontend
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: web-app
