Solve6/ingress-tls.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls-ingress
  annotations:  
    nginx.ingress.kubernetes.io/rewrite-target: /
  namespace: netology
spec:
  tls:
  - hosts:
    - "myapp.example.com"
    secretName: "tls-secret"
  rules:
  - host: "myapp.example.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-frontend
            port:
              number: 80
